Add 403 error page to nginx conf

--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -31,6 +31,7 @@ http {
   <% end %>
 
     error_page   404          /404.html;
+    error_page   403          /403.html;
     error_page   502 503 504  /50x.html;
 
     location / {
